# python-project-structuring

./: README.md
neptuncli-project/: pyproject.toml  requirements.txt
neptuncli-project/neptuncli/: __main__.py
