[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name="neptuncli"
version="0.0.1"
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
neptuncli = "neptuncli.__main__:main"

[tool.setuptools.packages.find]
include = ["neptuncli*"]
exclude = ["tests*"]